add task solution

--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -95,7 +95,7 @@
         background-position: top;
         background-size: 100%;
         width: 100%;
-        height: 100%;
+        height: 60vh;
       }
 
       @include onDesktop {
