--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -7,7 +7,8 @@
     display: none;
 
     @include onTablet {
-      @include consentPaddingInline;
+      // @include consentPaddingInline;
+      padding-inline-end: 34px;
       display: block;
       position: absolute;
       top: 0;
@@ -21,6 +22,10 @@
     @include onTablet {
       display: block;
     }
+
+    @include onDesktop {
+      // position: absolute;
+    }
   }
 
   &__block {
@@ -30,7 +35,6 @@
    @include onTablet {
     display: flex;
     flex-direction: column;
-    align-items: center;
     row-gap: 60px;
    }
   }
