--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -3,7 +3,7 @@
   display: grid;
   row-gap: 110px;
   padding-block: 110px;
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
 
   @include onTablet {
     display: grid;
