--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,9 +3,12 @@
   font-family: 'Inter', sans-serif;
   margin: 0;
   background-color: #f7f7f7;
-  scroll-behavior: smooth;
 }
 .page:has(.page__menu:target) {
   overflow: hidden;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
